[package]
name = "hook-playground"
version = "0.1.0"
edition = "2021"

[dependencies.windows]
git = "https://github.com/microsoft/windows-rs"
features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus"]