[package]
name = "hook-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
capstone = "0.12.0"
winapi = "0.3.9"
anyhow = "1.0.95"
widestring = "1.1.0"
goblin = "0.9.3"

[dependencies.windows]
git = "https://github.com/microsoft/windows-rs"
features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_System_Kernel",
    "Wdk_System_Threading",
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Memory"
]
